--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,7 +1,7 @@
 # 项目contextPath
 server.servlet.context-path=/
 # 服务端口
-server.port=8080
+server.port=8089
 # session最大超时时间(分钟)，默认为30
 server.session-timeout=60
 # tomcat最大线程数，默认为200
@@ -30,10 +30,10 @@ spring.thymeleaf.cache=false
 spring.thymeleaf.cache-period=0
 spring.thymeleaf.template.cache=false
 
-#注意中文乱码
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/smart-parking?characterEncoding=utf-8&useSSL=false&serverTimezone=Asia/Shanghai
+#注意中文乱码，mysql8必须要加上&allowPublicKeyRetrieval=true，mysql5无需加
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/smart-parking?characterEncoding=utf-8&useSSL=false&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=Shanghai123456.
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # Specify the DBMS
 spring.jpa.database = MYSQL
